--- a/html/index.html
+++ b/html/index.html
@@ -9,31 +9,26 @@
 
 <body>
     <input type="file" name="file" id="file">
-    <div>
+    <div class="container">
     </div>
     <script>
+        function splitStringByArray(str, delimiters) {
+            // 转义正则表达式中的特殊字符
+            const escapedDelimiters = delimiters.map(delimiter => delimiter.replace(/[.*+?^${}()|[\]\\]/g, '\\$&'));
 
-        function parseQuestionsAndAnswers(data) {
-            let arr = [];
-            // let parts = [...new Set(data.split('\n').filter(item => item.includes("——")).map(item => item.split('、')[1] || item))].length;
-            let questions = data.split('\n').filter(item => item.includes("__")).map(item => {
-                return {
-                    label: item,
-                    answer: ''
-                }
-            });
-            let ans = data.split('\n').filter(item => item.includes(".") && !item.includes("__")).map(item => {
-                return item.match(/(\d+[\．\.][\s\S]*?)(?=\d+[\．\.]|$)/g)
-            });
-            const flattenedAnswers = ans.flat();
+            // 创建正则表达式，使用 | 作为分隔符
+            const regex = new RegExp(escapedDelimiters.join('|'), 'g');
 
-            // 将答案填入label对应的对象中
-            questions.forEach((item, index) => {
-                item.answer = flattenedAnswers[index];
-            });
-            return questions;
+            // 使用正则表达式分割字符串
+            return str.split(regex);
         }
+        // 分隔符数组
+        const splitArr = ['重点单词——知词形', '拓展单词——通变化', '阅读单词——晓词义', '短语自测'];
+
+        // 分割字符串
+
         document.getElementById('file').addEventListener('change', async function (e) {
+            document.querySelector('.container').innerHTML = ''
             const file = e.target.files[0];
             const formdata = new FormData();
             formdata.append('file', file);
@@ -42,33 +37,32 @@
                 body: formdata,
             })
             const res2 = await res.text()
-            // console.log(res2, res)
-            // console.log([...new Set(res2.split('\n').filter(item => item.includes("——")).map(item => item.split('、')[1] || item))]);4
-            const result = parseQuestionsAndAnswers(res2)
-            result.forEach(item => {
-                const p = document.createElement('p');
-                const labelSpan = document.createElement('span');
-                const answerSpan = document.createElement('span');
-                answerSpan.style.color = 'red';
-                labelSpan.innerText = item.label + ' ';
-                answerSpan.innerText = item.answer + ' ';
-                p.appendChild(labelSpan);
-                p.appendChild(answerSpan);
-                document.querySelector('div').appendChild(p);
+            const result = splitStringByArray(res2, splitArr).filter(item => item !== '').filter(item => item.includes('1'));
+            // console.log(res2, result);
+            let resultObjArr = []
+            for(let i = 0; i < 4; i++){
+                let obj = {};
+                obj.label = result[i].replaceAll(/[\n \t]/g, '').split(/\d{1,2}[．.]/).filter(item => item !== '');
+                obj.answer = result[i+4].replaceAll(/[\n \t]/g, '').split(/\d{1,2}[．.]/).filter(item => item !== '');
+                resultObjArr.push(obj);
+            }
+            console.log(resultObjArr);
+            resultObjArr.forEach((item, index) => {
+                const h1 = document.createElement('h1');
+                h1.innerText = splitArr[index];
+                document.querySelector('div').appendChild(h1);
+                item.label.forEach((item2, index2) => {
+                    const p = document.createElement('p');
+                    const labelSpan = document.createElement('span');
+                    const answerSpan = document.createElement('span');
+                    answerSpan.style.color = 'red';
+                    labelSpan.innerText = `${index2 + 1}.`+item2 + ' ';
+                    answerSpan.innerText = item.answer[index2];
+                    p.appendChild(labelSpan);
+                    p.appendChild(answerSpan);
+                    document.querySelector('.container').appendChild(p);
+                })
             })
-            // res2.split('\n').filter(item => item !== '').map(item => {
-            //     if(item.includes('___')){
-            //         const p = document.createElement('p');
-            //         p.innerText = item;
-            //         document.querySelector('div').appendChild(p);
-            //     }
-            // })
-            // const answerArr = res2.split('\n').filter(item => item !== '').map(item => {
-            //     if(!item.includes('___') && item.match(/^[0-9]/)){
-            //         return item
-            //     }
-            // })
-            // console.log(answerArr);
 
         })
     </script>
